added flip styles to cards

--- a/src/index.html
+++ b/src/index.html
@@ -40,114 +40,158 @@
         <section class="gallery">
             <div class="content-center__galerry-subtitle">
                 <h2>MIS PROYECTOS</h2>
-                
+
             </div>
             <div class="gallery__content">
                 <div class="gallery__content-card"> <a href="https://restaurant-five-kappa.vercel.app/" target="_blank">
-                        <img src="./assets/img_restaurant.jpg" alt="image">
-                        <h2>Creación página Web: Restaurante (Responsive)</h2>
-                        <H3>Herramientas utilizadas: </H3>
-                        <div class="gallery__content-card-icons">
-                            <img src="./assets/icons/html-5.png" alt="image">
-                            <img src="./assets/icons/sass.png" alt="image">
+                        <div class="face front">
+                            <img src="./assets/img_restaurant.jpg" alt="image">
+                            <h2>Creación página Web: Restaurante (Responsive)</h2>
+                        </div>
+                        <div class="face back">
+                            <h2>Creación página Web: Restaurante (Responsive)</h2>
+                            <H3>Herramientas utilizadas: </H3>
+                            <div class="gallery__content-card-icons">
+                                <img src="./assets/icons/html-5.png" alt="image">
+                                <img src="./assets/icons/sass.png" alt="image">
+                            </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="gallery__content-card"> <a href="https://replicar-slack.vercel.app/" target="_blank">
-                        <img src="./assets/work_2.jpg" alt="image">
-                        <h2>Recreación página Web adaptada a dispositivos móviles (Responsive)</h2>
-                        <H3>Herramientas utilizadas: </H3>
-                        <div class="gallery__content-card-icons">
-                            <img src="./assets/icons/html-5.png" alt="image">
-                            <img src="./assets/icons/css-3.png" alt="image">
+                        <div class="face front">
+                            <img src="./assets/work_2.jpg" alt="image">
+                            <h2>Recreación página Web adaptada a dispositivos móviles (Responsive)</h2>
+                        </div>
+                        <div class="face back">
+                            <h2>Recreación página Web adaptada a dispositivos móviles (Responsive)</h2>
+                            <H3>Herramientas utilizadas: </H3>
+                            <div class="gallery__content-card-icons">
+                                <img src="./assets/icons/html-5.png" alt="image">
+                                <img src="./assets/icons/css-3.png" alt="image">
+                            </div>
                         </div>
                     </a>
                 </div>
-
 
                 <div class="gallery__content-card"> <a href="https://poke-api-liart-three.vercel.app/" target="_blank">
-                        <img src="./assets/work_3_pokeApi.jpg" alt="image">
-                        <h2>Creación de página Web consumiendo API REST pública (https://pokeapi.co/)</h2>
-                        <H3>Herramientas utilizadas:</H3>
-                        <div class="gallery__content-card-icons">
-                            <img src="./assets/icons/html-5.png" alt="image">
-                            <img src="./assets/icons/css-3.png" alt="image">
-                            <img src="./assets/icons/js.png" alt="image">
+                        <div class="face front">
+                            <img src="./assets/work_3_pokeApi.jpg" alt="image">
+                            <h2>Creación de página Web consumiendo API REST pública (https://pokeapi.co/)</h2>
+                        </div>
+                        <div class="face back">
+                            <h2>Creación de página Web consumiendo API REST pública (https://pokeapi.co/)</h2>
+                            <H3>Herramientas utilizadas:</H3>
+                            <div class="gallery__content-card-icons">
+                                <img src="./assets/icons/html-5.png" alt="image">
+                                <img src="./assets/icons/css-3.png" alt="image">
+                                <img src="./assets/icons/js.png" alt="image">
+                            </div>
                         </div>
                     </a>
                 </div>
 
-
                 <div class="gallery__content-card"> <a href="https://formula1-page.vercel.app/" target="_blank">
-                        <img src="./assets/work_4_formula1Page.jpg" alt="image">
-                        <h2>Creación de página Web consumiendo API REST propia con autenticación</h2>
-                        <H3>Herramientas utilizadas:</H3>
-                        <div class="gallery__content-card-icons">
-                            <img src="./assets/icons/html-5.png" alt="image">
-                            <img src="./assets/icons/css-3.png" alt="image">
-                            <img src="./assets/icons/js.png" alt="image">
-                            <img src="./assets/icons/nodejs.png" alt="image">
-                            <img src="./assets/icons/mongodb-atlas.png" alt="image">
+                        <div class="face front">
+                            <img src="./assets/work_4_formula1Page.jpg" alt="image">
+                            <h2>Creación de página Web consumiendo API REST</h2>
+                        </div>
+                        <div class="face back">
+                            <h2>Creación de página Web consumiendo API REST propia con autenticación</h2>
+                            <H3>Herramientas utilizadas:</H3>
+                            <div class="gallery__content-card-icons">
+                                <img src="./assets/icons/html-5.png" alt="image">
+                                <img src="./assets/icons/css-3.png" alt="image">
+                                <img src="./assets/icons/js.png" alt="image">
+                                <img src="./assets/icons/nodejs.png" alt="image">
+                                <img src="./assets/icons/mongodb-atlas.png" alt="image">
+                            </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="gallery__content-card"> <a href="https://rickandmorty-api-react.vercel.app/"
                         target="_blank">
-                        <img src="./assets/work_5_rickandmortyApi.jpg" alt="image">
-                        <h2>Aplicación hecha con React, consumiendo API REST pública con rutas, paginación y búsqueda de
-                            personajes (https://rickandmortyapi.com/)</h2>
-                        <H3>Herramientas utilizadas:</H3>
-                        <div class="gallery__content-card-icons">
-                            <img src="./assets/icons/html-5.png" alt="image">
-                            <img src="./assets/icons/sass.png" alt="image">
-                            <img src="./assets/icons/js.png" alt="image">
-                            <img src="./assets/icons/react.png" alt="image">
+                        <div class="face front">
+                            <img src="./assets/work_5_rickandmortyApi.jpg" alt="image">
+                            <h2>Aplicación hecha con React</h2>
+                        </div>
+                        <div class="face back">
+                            <h2>Aplicación hecha con React, consumiendo API REST pública con rutas, paginación y
+                                búsqueda de
+                                personajes (https://rickandmortyapi.com/)</h2>
+                            <H3>Herramientas utilizadas:</H3>
+                            <div class="gallery__content-card-icons">
+                                <img src="./assets/icons/html-5.png" alt="image">
+                                <img src="./assets/icons/sass.png" alt="image">
+                                <img src="./assets/icons/js.png" alt="image">
+                                <img src="./assets/icons/react.png" alt="image">
+                            </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="gallery__content-card"> <a href="https://the-star-wars-api-omega.vercel.app/"
                         target="_blank">
-                        <img src="./assets/work_6_star-warsApp.jpg" alt="image">
-                        <h2>Aplicación hecha con React, consumiendo API REST pública con rutas, paginación, detalle de personajes y autenticación: login y logout (https://starwars-server.vercel.app/)</h2>
-                        <H3>Herramientas utilizadas:</H3>
-                        <div class="gallery__content-card-icons">
-                            <img src="./assets/icons/html-5.png" alt="image">
-                            <img src="./assets/icons/sass.png" alt="image">
-                            <img src="./assets/icons/js.png" alt="image">
-                            <img src="./assets/icons/react.png" alt="image">
+
+                        <div class="face front">
+                            <img src="./assets/work_6_star-warsApp.jpg" alt="image">
+                            <h2>Aplicación hecha con React</h2>
+                        </div>
+
+                        <div class="face back">
+                            <h2>Aplicación hecha con React, consumiendo API REST pública con rutas, paginación, detalle
+                                de
+                                personajes y autenticación: login y logout (https://starwars-server.vercel.app/)</h2>
+                            <H3>Herramientas utilizadas:</H3>
+                            <div class="gallery__content-card-icons">
+                                <img src="./assets/icons/html-5.png" alt="image">
+                                <img src="./assets/icons/sass.png" alt="image">
+                                <img src="./assets/icons/js.png" alt="image">
+                                <img src="./assets/icons/react.png" alt="image">
+                            </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="gallery__content-card"> <a href="https://the-simpsons-app-angular.vercel.app/"
                         target="_blank">
-                        <img src="./assets/work_7_theSimpsonsApp.jpg" alt="image">
-                        <h2>Aplicación hecha con Angular, consumiendo API REST pública con búsqueda de pesonajes
-                            (https://api.sampleapis.com/simpsons/info)</h2>
-                        <H3>Herramientas utilizadas:</H3>
-                        <div class="gallery__content-card-icons">
-                            <img src="./assets/icons/html-5.png" alt="image">
-                            <img src="./assets/icons/sass.png" alt="image">
-                            <img src="./assets/icons/js.png" alt="image">
-                            <img src="./assets/icons/angular.png" alt="image">
+                        <div class="face front">
+                            <img src="./assets/work_7_theSimpsonsApp.jpg" alt="image">
+                            <h2>Aplicación hecha con Angular</h2>
+                        </div>
+                        <div class="face back">
+                            <h2>Aplicación hecha con Angular, consumiendo API REST pública con búsqueda de pesonajes
+                                (https://api.sampleapis.com/simpsons/info)</h2>
+                            <H3>Herramientas utilizadas:</H3>
+                            <div class="gallery__content-card-icons">
+                                <img src="./assets/icons/html-5.png" alt="image">
+                                <img src="./assets/icons/sass.png" alt="image">
+                                <img src="./assets/icons/js.png" alt="image">
+                                <img src="./assets/icons/angular.png" alt="image">
+                            </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="gallery__content-card"> <a href="https://futurama-app-angular.vercel.app/home"
                         target="_blank">
-                        <img src="./assets/work_8_futuramaApp.jpg" alt="image">
-                        <h2>Aplicación hecha con Angular, consumiendo API REST pública utilizando rutas, detalles de
-                            personaje y "Dark Mode" (https://api.sampleapis.com/futurama/info)</h2>
-                        <H3>Herramientas utilizadas:</H3>
-                        <div class="gallery__content-card-icons">
-                            <img src="./assets/icons/html-5.png" alt="image">
-                            <img src="./assets/icons/sass.png" alt="image">
-                            <img src="./assets/icons/js.png" alt="image">
-                            <img src="./assets/icons/angular.png" alt="image" id="ABOUT">
+                        <div class="face front">
+                            <img src="./assets/work_8_futuramaApp.jpg" alt="image">
+                            <h2>Aplicación hecha con Angular</h2>
+                        </div>
+
+                        <div class="face back">
+                            <h2>Aplicación hecha con Angular, consumiendo API REST pública utilizando rutas, detalles de
+                                personaje y "Dark Mode" (https://api.sampleapis.com/futurama/info)</h2>
+                            <H3>Herramientas utilizadas:</H3>
+                            <div class="gallery__content-card-icons">
+                                <img src="./assets/icons/html-5.png" alt="image">
+                                <img src="./assets/icons/sass.png" alt="image">
+                                <img src="./assets/icons/js.png" alt="image">
+                                <img src="./assets/icons/angular.png" alt="image" id="ABOUT">
+                            </div>
                         </div>
                     </a>
                 </div>
@@ -162,18 +206,26 @@
                 </div>
                 <div class="container-about__content">
                     <h3>Sobre mi</h3>
-                    <p>Soy un apasionado de la tecnología aplicada a la resolución de problemas, que luego de una extensa trayectoria profesional, decide dar el paso a Programador Web.</p>
-                    <p>Luego de la finalización de un bootcamp de FullStack Developer con el equipo de <a href="https://www.upgrade-hub.com/" target="_blank" class="container-about__work">Upgrade Hub</a>, he encontrado a lo que me quiero dedicar: Desarrollo WEB!</p>
+                    <p>Soy un apasionado de la tecnología aplicada a la resolución de problemas, que luego de una
+                        extensa trayectoria profesional, decide dar el paso a Programador Web.</p>
+                    <p>Luego de la finalización de un bootcamp de FullStack Developer con el equipo de <a
+                            href="https://www.upgrade-hub.com/" target="_blank" class="container-about__work">Upgrade
+                            Hub</a>, he encontrado a lo que me quiero dedicar: Desarrollo WEB!</p>
                     <p>Busco una oportunidad donde pueda…</p>
                     <ul>
                         <li>Poner en práctica mis conocimientos y seguir aprendiendo.</li>
-                        <li>Aportar mi experiencia profesional a un equipo de desarrollo para obtener excelentes resultados para el cliente
-                        (externos/internos), y por lo tanto para la empresa</li>
-                        <li>Trabajar con usuarios exigentes que permitan ofrecer lo mejor de mí para resolver sus problemas y lograr juntos sus
-                        objetivos.</li>
-                    </ul>    
-                    <p>Por favor, no olvides revisar la sección <a href="#WORK" class="container-about__work">"Mis Proyectos"</a>, donde he conseguido poner en práctica los conocimientos adquiridos a lo largo de estos meses (HTML5, CSS3, SAAS, Javascript, Angular, React, Node JS, PHP (Symfony), MongoDB, MySQL).</p>
-                    
+                        <li>Aportar mi experiencia profesional a un equipo de desarrollo para obtener excelentes
+                            resultados para el cliente
+                            (externos/internos), y por lo tanto para la empresa</li>
+                        <li>Trabajar con usuarios exigentes que permitan ofrecer lo mejor de mí para resolver sus
+                            problemas y lograr juntos sus
+                            objetivos.</li>
+                    </ul>
+                    <p>Por favor, no olvides revisar la sección <a href="#WORK" class="container-about__work">"Mis
+                            Proyectos"</a>, donde he conseguido poner en práctica los conocimientos adquiridos a lo
+                        largo de estos meses (HTML5, CSS3, SAAS, Javascript, Angular, React, Node JS, PHP (Symfony),
+                        MongoDB, MySQL).</p>
+
                     <div class="container-about__details">
                         <h3>Datos de contacto: </h3>
                         <h4>email: </h4>
@@ -322,8 +374,8 @@
                         src="./assets/icons/linkedin.svg" alt="img"></a>
                 <a href="https://github.com/xulioxaviert/" target="_blank"> <img src="./assets/icons/github.svg"
                         alt="img"></a>
-                <a href="https://vercel.com/xulioxaviert/portfolio" target="_blank"> <img src="./assets/icons/vercel.svg"
-                        alt="img"></a>
+                <a href="https://vercel.com/xulioxaviert/portfolio" target="_blank"> <img
+                        src="./assets/icons/vercel.svg" alt="img"></a>
 
             </div>
         </div>
