--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <nav class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__list__item"><a href="#HOME">CASA</a></li>
+                <li class="navigation__list__item"><a href="#HOME">HOME</a></li>
                 <li class="navigation__list__item"><a href="#WORK">PROYECTOS</a> </li>
                 <li class="navigation__list__item"><a href="#ABOUT">SOBRE MI</a> </li>
                 <li class="navigation__list__item"><a href="#RESUME">RESUMEN</a> </li>
