actualizado portfolio y algunos detalles en los estilos de la galería y la experiencia

--- a/src/index.html
+++ b/src/index.html
@@ -251,7 +251,7 @@
                         <h3>Educación</h3>
                     </div>
                     <div class="container-resume__education-card">
-                        <h5>Febrero 2022 - Actual.</h5>
+                        <h5>Febrero 2022 - Mayo 2022.</h5>
                         <h4>Full Stack Development.</h4>
                         <p>Llevar a cabo el desarrollo de la estructura del sitio web</p>
                         <p>Diseñar elementos front-end</p>
@@ -284,10 +284,39 @@
                     </div>
 
                 </div>
+
                 <div class="container-resume__experience">
                     <div class="container-resume__experience-title">
                         <h3>Experiencia</h3>
                     </div>
+                    <div class="container-resume__experience-card">
+                        <h5>Junio 2022 – Actual</h5>
+                        <h4>Desarrollador Front-end.</h4>
+                        <p>Proyectos de logística</p>
+                        <p></p>
+                        <p>Proyectos de Derechos de Autor y medios audiovisuales</p>
+                        <p>Landing Pages</p>
+                        <h4>Herramientas utilizadas:</h4>
+                        <div class="container-resume__experience-card-tools">
+                            <div class="container-resume__experience-card-tools-content">
+                                <p>.NET Core 6</p>
+                                <p>Bootstrap 5</p>
+                                <p>Less</p>
+                                <p>Figma</p>
+                            </div>
+                            <div class="container-resume__experience-card-tools-content">
+                                <p>Zeplin</p>
+                                <p>Kendo UI </p>
+                                <p>jquery</p>
+                                <p>Javascript</p>
+                            </div>
+                        </div>
+
+
+
+                        <h4>Solusoft</h4>
+                    </div>
+
                     <div class="container-resume__experience-card">
                         <h5>Julio 2021 – Diciembre 2021</h5>
                         <h4>Responsable de Logística.</h4>
