actualizada la section about me

--- a/src/index.html
+++ b/src/index.html
@@ -208,12 +208,17 @@
                     <h3>Sobre mi</h3>
                     <p>Soy un apasionado de la tecnología aplicada a la resolución de problemas, que luego de una
                         extensa trayectoria profesional, decide dar el paso a Programador Web.</p>
-                    <p>Luego de la finalización de un bootcamp de FullStack Developer con el equipo de <a
+                    <p>Tras la finalización de un bootcamp de FullStack Developer con el equipo de <a
                             href="https://www.upgrade-hub.com/" target="_blank" class="container-about__work">Upgrade
-                            Hub</a>, he encontrado a lo que me quiero dedicar: Desarrollo WEB!</p>
-                    <p>Busco una oportunidad donde pueda…</p>
+                            Hub</a>, encuentro lo que, a partir de ahora, será mi nueva profesión: Desarrollador WEB!</p>
+                    <p>Empiezo este camino de la mano de un excelente equipo en <a href="https://www.solusoft.es/inicio.aspx"
+                            target="_blank" class="container-about__work">Solusoft
+                            </a>, que me han dado la oportunidad de seguir aprendiendo nuevas tecnologías y participar en proyectos retadores.</p>
+
+
+                    <p>Busco oportunidades laborales donde pueda…</p>
                     <ul>
-                        <li>Poner en práctica mis conocimientos y seguir aprendiendo.</li>
+                        <li>Poner en práctica mis conocimientos y seguir aprendiendo y actualizándome en tecnologías punteras.</li>
                         <li>Aportar mi experiencia profesional a un equipo de desarrollo para obtener excelentes
                             resultados para el cliente
                             (externos/internos), y por lo tanto para la empresa</li>
@@ -222,9 +227,8 @@
                             objetivos.</li>
                     </ul>
                     <p>Por favor, no olvides revisar la sección <a href="#WORK" class="container-about__work">"Mis
-                            Proyectos"</a>, donde he conseguido poner en práctica los conocimientos adquiridos a lo
-                        largo de estos meses (HTML5, CSS3, SAAS, Javascript, Angular, React, Node JS, PHP (Symfony),
-                        MongoDB, MySQL).</p>
+                            Proyectos"</a>, donde he conseguido poner en práctica los conocimientos adquiridos durante el bootcamp (HTML5, CSS3, SAAS, Javascript, Angular, React, Node JS, PHP (Symfony),
+                        MongoDB, MySQL); así como la sección de <a href="#RESUME" class="container-about__work">"Mi Experiencia"</a> donde podrán encontrar más detalles de mi nueva profesión!</p>
 
                     <div class="container-about__details">
                         <h3>Datos de contacto: </h3>
