actualizado el id del contenedor de about me

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,7 @@
                                 <img src="./assets/icons/html-5.png" alt="image">
                                 <img src="./assets/icons/sass.png" alt="image">
                                 <img src="./assets/icons/js.png" alt="image">
-                                <img src="./assets/icons/angular.png" alt="image" id="ABOUT">
+                                <img src="./assets/icons/angular.png" alt="image">
                             </div>
                         </div>
                     </a>
@@ -200,7 +200,7 @@
         </section>
 
         <section>
-            <div class="container-about">
+            <div class="container-about" id="ABOUT">
                 <div class="container-about__img">
                     <img src="./assets/xulio_2.png" alt="img">
                 </div>
